--- a/medidorModel/App.config
+++ b/medidorModel/App.config
@@ -10,8 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="medidoresappEntities" connectionString="metadata=res://*/medidorDB.csdl|res://*/medidorDB.ssdl|res://*/medidorDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=medidoresapp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="medidorappEntities" connectionString="metadata=res://*/medidorModelEntities.csdl|res://*/medidorModelEntities.ssdl|res://*/medidorModelEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=medidoresapp;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="appmedidoresEntities" connectionString="metadata=res://*/appmedidorEntities.csdl|res://*/appmedidorEntities.ssdl|res://*/appmedidorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=appmedidores;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+
+    
+  <add name="appmedidorEntities" connectionString="metadata=res://*/appmedidorEntities.csdl|res://*/appmedidorEntities.ssdl|res://*/appmedidorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=appmedidor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
