--- a/medidorModel/medidorModel.csproj
+++ b/medidorModel/medidorModel.csproj
@@ -81,7 +81,7 @@
       <DependentUpon>appmedidorEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Usuarios.cs">
+    <Compile Include="Usuario.cs">
       <DependentUpon>appmedidorEntities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
