app y web config actualizado

--- a/medidorModel/App.config
+++ b/medidorModel/App.config
@@ -12,5 +12,6 @@
   <connectionStrings>
 
     
-  <add name="appmedidorEntities" connectionString="metadata=res://*/appmedidorEntities.csdl|res://*/appmedidorEntities.ssdl|res://*/appmedidorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=appmedidor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="appmedidorEntities" connectionString="metadata=res://*/appmedidorEntities.csdl|res://*/appmedidorEntities.ssdl|res://*/appmedidorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=appmedidor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
