--- a/medidorWeb/Web.config
+++ b/medidorWeb/Web.config
@@ -31,4 +31,12 @@
     </providers>
   </entityFramework>
 
+  <connectionStrings>
+
+
+    <add name="appmedidorEntities" connectionString="metadata=res://*/appmedidorEntities.csdl|res://*/appmedidorEntities.ssdl|res://*/appmedidorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-890OR13\SQLEXPRESS;initial catalog=appmedidor;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
+  
+
 </configuration>
